Change FuncAnimation so that it only plots background once.
The background is plotted once and only the lines are cleared on each frame
of the animation. This should speed up the initial plotting - on my system
this descreased the plot time from 34s to about 20s, which was comparable
to the animation with no background at all.

The saving of the animation to the mp4 file seems to take around 35s on my
system regardless of the method used, and the files generated seem
identical.

Also added an alternate animation cell that updates the lines instead of
clearing them, which may of may not be slightly faster.

Finally, also minor tidy-ups to the matplotlib code, including legend
location, and just specifying number of frames and FuncAnimator will
automatically create an iterator.

--- a/notebooks/The_Coronavirus_Curve.ipynb
+++ b/notebooks/The_Coronavirus_Curve.ipynb
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, let's animate without the Numberphile background."
+    "Now, let's animate the plot in Jupyter."
    ]
   },
   {
@@ -757,25 +757,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def animate(i):\n",
-    "    \"\"\"We put all the animation update code into one function\n",
-    "       that loads the first i rows from the dataframe df.\"\"\"\n",
-    "    ax.clear()\n",
-    "    data = df.iloc[: i + 1]\n",
-    "    plot = data.plot(color=[\"blue\", \"red\", \"green\"], lw=4, ax=ax)\n",
-    "    plt.title(\"The Coronavirus Curve\", fontsize=15)\n",
-    "    plt.xlabel(\"Time (units)\", fontsize=12)\n",
-    "    plt.ylabel(\"Percentage of population\", fontsize=12)\n",
-    "    plot.set_xlim(0, maxT)\n",
-    "    plot.set_ylim(0, 1)\n",
-    "\n",
-    "\n",
+    "# Set up the plotting axes, before plotting any data\n",
     "fig, ax = plt.subplots(figsize=(14, 6))\n",
-    "animate(0)  # initialise the plot\n",
-    "ani = FuncAnimation(\n",
-    "    fig, animate, frames=list(range(len(df))), repeat=False, interval=50, blit=True,\n",
+    "ax.set_title(\"The Coronavirus Curve\", fontsize=15)\n",
+    "ax.set_xlabel(\"Time (units)\", fontsize=12)\n",
+    "ax.set_ylabel(\"Percentage of population\", fontsize=12)\n",
+    "ax.set_xlim(0, maxT)\n",
+    "ax.set_ylim(0, 1)\n",
+    "\n",
+    "# Add the background only once\n",
+    "# (avoiding replotting the background each frame saves lots of time)\n",
+    "background = mpimg.imread(\"../images/numberphile_background.jpg\")\n",
+    "ax.imshow(\n",
+    "    background, aspect=ax.get_aspect(), extent=ax.get_xlim() + ax.get_ylim(),\n",
     ")\n",
-    "plt.show()"
+    "\n",
+    "\n",
+    "def animate(i):\n",
+    "    # Clear just the lines from the plot, leaving the background\n",
+    "    ax.lines.clear()\n",
+    "\n",
+    "    # Plot the data for this iteration\n",
+    "    data = df.iloc[: i + 1]\n",
+    "    data.plot(color=[\"blue\", \"red\", \"green\"], lw=4, ax=ax, legend=False)\n",
+    "\n",
+    "    # Plot the legend separately, to allow us to control the position and\n",
+    "    # to pandas adding duplicate legend entries\n",
+    "    ax.legend(loc=\"center right\")\n",
+    "\n",
+    "\n",
+    "ani = FuncAnimation(fig, animate, frames=len(df), repeat=False, interval=50)"
    ]
   },
   {
@@ -783,81 +794,6 @@
    "metadata": {},
    "source": [
     "The live animation is a bit slow as it's rendering in real time, but you can also save the full-speed animation as a smooth movie."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ani.save(\"../images/coronavirus_curve_no_background.mp4\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Video(\"../images/coronavirus_curve_no_background.mp4\", width=1000)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Danger:</b> This next cell may be quite slow to run. Proceed with caution.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's now add the Numberphile brown paper background."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# N.B. this may be very slow\n",
-    "\n",
-    "\n",
-    "def animate(i):\n",
-    "    ax.clear()\n",
-    "    data = df.iloc[: i + 1]\n",
-    "    plot = data.plot(color=[\"blue\", \"red\", \"green\"], lw=4, ax=ax)\n",
-    "    plt.title(\"The Coronavirus Curve\", fontsize=15)\n",
-    "    plt.xlabel(\"Time (units)\", fontsize=12)\n",
-    "    plt.ylabel(\"Percentage of population\", fontsize=12)\n",
-    "    plot.set_xlim(0, maxT)\n",
-    "    plot.set_ylim(0, 1)\n",
-    "    plot.imshow(\n",
-    "        background,\n",
-    "        aspect=plot.get_aspect(),\n",
-    "        extent=plot.get_xlim() + plot.get_ylim(),\n",
-    "        zorder=1,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(14, 6))\n",
-    "background = mpimg.imread(\"../images/numberphile_background.jpg\")\n",
-    "animate(0)\n",
-    "ani = FuncAnimation(\n",
-    "    fig, animate, frames=list(range(len(df))), repeat=False, interval=50, blit=True,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This is definitely quite slow, so let's save it as a full screen movie that you can be proud to share with friends & family."
    ]
   },
   {
@@ -876,6 +812,62 @@
    "outputs": [],
    "source": [
     "Video(\"../images/coronavirus_curve.mp4\", width=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-info\">\n",
+    "Below is an alternative way of plotting that may prove faster on your system, however it is more difficult to understand what is going on.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the plotting axes, before plotting any data\n",
+    "fig, ax = plt.subplots(figsize=(14, 6))\n",
+    "ax.set_title(\"The Coronavirus Curve\", fontsize=15)\n",
+    "ax.set_xlabel(\"Time (units)\", fontsize=12)\n",
+    "ax.set_ylabel(\"Percentage of population\", fontsize=12)\n",
+    "ax.set_xlim(0, maxT)\n",
+    "ax.set_ylim(0, 1)\n",
+    "\n",
+    "# Add the background only once\n",
+    "# (avoiding replotting the background each frame saves lots of time)\n",
+    "background = mpimg.imread(\"../images/numberphile_background.jpg\")\n",
+    "ax.imshow(\n",
+    "    background, aspect=ax.get_aspect(), extent=ax.get_xlim() + ax.get_ylim(),\n",
+    ")\n",
+    "\n",
+    "# Plot an empty DataFrame, to get the lines and axes set up in the plot\n",
+    "data = df.iloc[:0]\n",
+    "data.plot(color=[\"blue\", \"red\", \"green\"], lw=4, ax=ax, legend=False)\n",
+    "ax.legend(loc=\"center right\")\n",
+    "\n",
+    "\n",
+    "def animate(i):\n",
+    "    # Select just the data for this frame\n",
+    "    data = df.iloc[: i + 1]\n",
+    "    \n",
+    "    # For each of the three lines in the plot and the three columns\n",
+    "    # of the DataFrame, update the line with the data for this frame\n",
+    "    for line, (_, col_data) in zip(ax.lines, data.items()):\n",
+    "        line.set_xdata(col_data.index)\n",
+    "        line.set_ydata(col_data)\n",
+    "    \n",
+    "    # blit=True doesn't seem to affect the speed of this plot, however\n",
+    "    # if we're using it then we need ot return the updated artists in\n",
+    "    # this frame\n",
+    "    return ax.lines\n",
+    "\n",
+    "ani = FuncAnimation(\n",
+    "    fig, animate, frames=len(df), repeat=False, interval=50, blit=True\n",
+    ")\n"
    ]
   },
   {
